--- a/RecordSortAPI/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/RecordSortAPI/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using CraftJackRecordSortAPI.Areas.HelpPage.Models
-@using CraftJackRecordSortAPI.Areas.HelpPage.ModelDescriptions
+@using RecordSortAPI.Areas.HelpPage.Models
+@using RecordSortAPI.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
