--- a/RecordSortAPI/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/RecordSortAPI/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using CraftJackRecordSortAPI.Areas.HelpPage
+@using RecordSortAPI.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
