--- a/RecordSortAPI/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/RecordSortAPI/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using CraftJackRecordSortAPI.Areas.HelpPage.Models
+@using RecordSortAPI.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
