--- a/RecordSortAPI/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/RecordSortAPI/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using CraftJackRecordSortAPI.Areas.HelpPage.Models
+@using RecordSortAPI.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
