--- a/RecordSortAPI/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
+++ b/RecordSortAPI/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using CraftJackRecordSortAPI.Areas.HelpPage.ModelDescriptions
+@using RecordSortAPI.Areas.HelpPage.ModelDescriptions
 @model CollectionModelDescription
 @if (Model.ElementDescription is ComplexTypeModelDescription)
 {
