--- a/RecordSortAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
+++ b/RecordSortAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using CraftJackRecordSortAPI.Areas.HelpPage.ModelDescriptions
+@using RecordSortAPI.Areas.HelpPage.ModelDescriptions
 @model ComplexTypeModelDescription
 @Html.DisplayFor(m => m.Properties, "Parameters")
