--- a/RecordSortAPI/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/RecordSortAPI/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using CraftJackRecordSortAPI.Areas.HelpPage.ModelDescriptions
+@using RecordSortAPI.Areas.HelpPage.ModelDescriptions
 @model SimpleTypeModelDescription
 @Model.Documentation
